Update country option in registration form from USA to Kenya

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <label for="country">Country:</label>
                 <select id="country" name="country" required>
                     <option value="">Select a country</option>
-                    <option value="usa">USA</option>
+                    <option value="usa">Kenya</option>
                     <option value="canada">Canada</option>
                     <option value="uk">UK</option>
                     <option value="other">Other</option>
