Update country options in registration form to include Uganda, Tanzania, and Rwanda

--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
                 <label for="country">Country:</label>
                 <select id="country" name="country" required>
                     <option value="">Select a country</option>
-                    <option value="usa">Kenya</option>
-                    <option value="canada">Canada</option>
-                    <option value="uk">UK</option>
+                    <option value="kenya">Kenya</option>
+                    <option value="uganda">Uganda</option>
+                    <option value="tanzania">Tanzania</option>
+                    <option value="australia">Rwanda</option>
+
                     <option value="other">Other</option>
                 </select>
                 <span class="error" id="countryError">Please select a country</span>
