Update country options in registration form to include additional African countries

--- a/index.html
+++ b/index.html
@@ -131,8 +131,13 @@
                     <option value="kenya">Kenya</option>
                     <option value="uganda">Uganda</option>
                     <option value="tanzania">Tanzania</option>
-                    <option value="australia">Rwanda</option>
-
+                    <option value="rwanda">Rwanda</option>
+                    <option value="burundi">Burundi</option>
+                    <option value="southSudan">South Sudan</option>
+                    <option value="ethiopia">Ethiopia</option>
+                    <option value="djibouti">Djibouti</option>
+                    <option value="somalia">Somalia</option>
+                    <option value="sudan">Sudan</option>
                     <option value="other">Other</option>
                 </select>
                 <span class="error" id="countryError">Please select a country</span>
